# CSC581-Game-Engine

./: CMakeLists.txt  README.md
include/: collision.h  entity.h  input.h  physics.h  scaling.h
src/: entity.cpp  input.cpp  main.cpp  physics.cpp  scaling.cpp
